apps/base/seedbox/torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: seedbox
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.39.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "(ip rule del table 51820; ip -6 rule del table 51820) || true"]
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: control
              containerPort: 8000
              protocol: TCP
            - name: http-proxy
              containerPort: 8888
              protocol: TCP
            - name: shadowsocks-tcp
              containerPort: 8388
              protocol: TCP
            - name: shadowsocks-udp
              containerPort: 8388
              protocol: UDP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              squat.ai/tun: "1" # tun device via generic-device-plugin
              memory: "256Mi"
              cpu: "300m"
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: webui
              containerPort: 8080
              protocol: TCP
            - name: bittorrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: media-storage
              mountPath: /mnt/storage/medias/downloads
              subPath: downloads
            - name: media-storage
              mountPath: /mnt/storage/medias/ratio
              subPath: ratio
            - name: config-storage
              mountPath: /config
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2"
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-storage
        - name: config-storage
          persistentVolumeClaim:
            claimName: qbittorrent-longhorn
