apps/base/seedbox/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: seedbox
spec:
  ports:
    - name: webui
      port: 80
      targetPort: 8080
      protocol: TCP
